--- a/nginx/conf.d/web.conf
+++ b/nginx/conf.d/web.conf
@@ -1,8 +1,8 @@
 server {
     listen 443 ssl;
-    server_name  web.orzwe.com;
-    ssl_certificate /etc/nginx/ssl/8717870_web.orzwe.com.pem;
-    ssl_certificate_key /etc/nginx/ssl/8717870_web.orzwe.com.key;
+    server_name  web.domain.com;
+    ssl_certificate /etc/nginx/ssl/8717870_web.domain.com.pem;
+    ssl_certificate_key /etc/nginx/ssl/8717870_web.domain.com.key;
     ssl_session_timeout 5m;
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
     #表示使用的加密套件的类型。
@@ -11,13 +11,13 @@ server {
     include favicon;
     #项目目录
     location / {
-        root   /data/www/sleep-web;
+        root   /data/www/web;
         index  index.html index.htm;
     }
 
 
-    access_log  /data/logs/nginx/weborzwe.access.log;
-    error_log  /data/logs/nginx/weborzwe.error.log;
+    access_log  /data/logs/nginx/web.access.log;
+    error_log  /data/logs/nginx/web.error.log;
 
 }
 
@@ -25,6 +25,6 @@ server {
     listen       80;
 
     #此处应该配置你的域名：
-    server_name web.orzwe.com;
+    server_name web.domain.com;
     rewrite  (.*)  https://$server_name$request_uri;
 }
